--- a/webPanel/css/style.css
+++ b/webPanel/css/style.css
@@ -1,19 +1,179 @@
 @charset 'UTF-8';
 
-/*
-	Overflow 1.1 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
+/*BODY*/
 
-/*********************************************************************************/
-/* Basic                                                                         */
-/*********************************************************************************/
+body{
+    margin: 0;
+    padding: 0;
+	overflow:hidden;
+	font-family: arial,helvetica;
+	color: rgba(0,0,0,0.5);
+ 	background-color: black;
+ 	background-size: cover;
+ 	background-position: center 0;
+ 	background-attachment: fixed;
+}
 
-	body
-	{
-		background: url('../images/photos/port.jpg') no-repeat;
-		background-size: cover;
-		background-position: center 0;
-		background-attachment: fixed;
-	}
+/*TITLES*/
+
+h1,h2,h3,h4,h5,h6{
+    font-weight: normal;
+    font-size: 100%;
+    margin:0;
+    padding:0;
+    color:#444;
+}
+
+h1{
+	font-size: 6em;	
+}
+
+/*LIST & LINK*/
+
+ol,ul{
+    list-style: none;
+    margin:0;
+    padding:0;
+}
+
+a{
+	text-decoration:none;
+}
+
+/*MENU*/
+
+#menu li{
+	display:inline-block;
+	margin: 10px;
+	color: #000;
+	background:#fff;
+	background: rgba(255,255,255, 0.5);
+	-webkit-border-radius: 10px; 
+            border-radius: 10px; 
+}
+
+#menu li.active{
+	background:#666;
+	background: rgba(0,0,0, 0.5);
+	color: #fff;
+}
+
+#menu li a{
+	text-decoration:none;
+	color: #000;
+}
+
+#menu li.active a:hover{
+	color: #000;
+}
+
+#menu li:hover{
+	background: rgba(255,255,255, 0.8);
+}
+
+#menu li a,
+#menu li.active a{
+	padding: 9px 18px;
+	display:block;
+}
+
+#menu li.active a{
+	color: #fff;
+}
+
+#menu{
+	position:fixed;
+	top:0;
+	left:0;
+	height: 40px;
+	z-index: 70;
+	width: 100%;
+	padding: 0;
+	margin:0;
+}
+
+/*SECTIONS*/
+
+.section{
+	text-align:center;
+    position: relative;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+#section0{
+ 	background-color: black;
+ 	background-size: cover;
+ 	background-position: center;
+ 	background-attachment: fixed;
+
+
+}
+
+.section.table, .slide.table{
+    display: table;
+    width: 100%;
+}
+
+/* PICTURE */
+
+#picOne{
+ 	border-radius: 20px;
+}
+
+/* Design of the div which appeared when an error has occured */
+
+.classname{
+
+	background-color: #BDBDBD;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	border-radius: 50px;
+	-moz-box-shadow: 0px 0px 20px #000000;
+	-webkit-box-shadow: 0px 0px 20px #000000;
+	box-shadow: 0px 0px 20px #000000;
+	opacity: 0.52;
+	-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity = 52);
+	filter: alpha(opacity = 52);
+	text-align: center;
+	font-size:40px; 
+	font-family: cursive, 
+	serif; color : #FFFFFF; 
+	line-height:110px; 
+	position:absolute; 
+	top:45%; 
+	left:25%; 
+	z-index:3; 
+	width:50%;
+}
+
+/*OTHER (Sliding, etc.)*/
+
+#superContainer{
+    height: 100%;
+    position: relative;
+	
+	/* Touch detection for Windows 8 */
+	-ms-touch-action: none; 
+}
+
+.tableCell{
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+}
+
+.slidesContainer{
+    float: left;
+    position: relative;
+}
+
+.scrollable{
+    overflow: scroll;
+}
+
+/*fieldset,img{
+    border: 0;
+}*/
